Add create specification and import category to swagger
